# graphserve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/problems/: README.md
docs/problems/1-streaming/: langgraph.md
docs/problems/2-openai-compat/: anythingllm.md  hf-chat-ui.md  jan.md  librechat.md  lobechat.md  open-webui.md
docs/problems/3-reasoning/: anthropic.md  deepseek.md  litellm.md  openai.md  openrouter.md  vllm.md
docs/superpowers/plans/: 2026-06-28-openwebui-compat-tests.md
src/graphserve/: __init__.py  _ids.py  errors.py  persistence.py  registry.py  router.py  translate.py
src/graphserve/adapters/: __init__.py  chat.py  common.py  responses.py
src/graphserve/routes/: chat.py  responses.py
tests/: fakes.py  test_adapters_output.py  test_errors.py  test_ids.py  test_openai_sdk_conformance.py  test_openwebui_compat.py  test_persistence.py  test_reasoning.py  test_registry.py  test_responses_roundtrip.py  test_responses_stream.py  test_router_callbacks.py  test_router_chat.py  test_router_responses.py  test_translate_chat.py  test_translate_context.py  test_translate_messages.py  test_translate_output.py  test_translate_strict_validation.py
